@@ -1,6 +1,6 @@
 #
 # This is an example configuration for MQTTSubscribe
-# It was created on 2024-01-25 at 10:27:26 with MQTTSubscribe version 3.0.0-rc05
+# It was created on 2024-03-08 at 08:38:12 with MQTTSubscribe version 3.0.0-rc06
 #
 
 # Replace '[MQTTSubscribe]' with '[MQTTSubscribeService]' or '[MQTTSubscribeDriver]'
@@ -99,7 +99,6 @@
             ignore = False
             
             # Configuration information about the MQTT message format for this topic
-            # ToDo: create wiki entry and reference it
             [[[[message]]]]
                 # The format of the MQTT payload.
                 # Currently support: individual, json, keyword.
