@@ -10,11 +10,15 @@ V3.0.0
 Enhancements:
 - Configuration mode
   Provide functions to export, update, and validate MQTTSubscribe's configuration.
-  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/MQTTSubscribe-Configurator-Mode.
+  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Configurator-Mode.
 
 - Simulation mode
   Simulates running MQTTSubscribe as a WeeWX driver or service.
-  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/MQTTSubscribe-Simulator-mode
+  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Simulator-mode
+
+- Parser mode
+  Read a MQTT 'message' from a file, parse it and extract the data.
+  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Parser-mode 
 
 - MQTTSubscribe's configuration is now validated on startup.
 - Support for paho-mqtt v2.
